# O-RAN-SecureSlice-DRL

./: CMakeLists.txt  README.md  config-file.json  drl-ss-onboard.url  multi_ue.grc  multi_ue.py  pyproject.toml  requirements.txt  toc.md  zmqoneue.sh  zmqtwoue.sh
DRL-SSxApp/: DDQN_agentemu.py  DDQNcheckpoint.pth  DQN_agentemu.py  DQNcheckpoint.pth  Dueling_DQN_agentemu.py  Overview.md  agentemu.py  checkpoint.pth  common.py  kill_stuff.sh  model_inference.py  multi_ue  setup_env.sh  testing.py
DRL-SSxApp/Slicing_Raw_Data/: UE1B10MUE2B10M.csv  UE1B10MUE2B20M.csv  UE1B10MUE2B30M.csv  UE1B10MUE2B40M.csv  UE1B1MUE2B10M.csv  UE1B1MUE2B1M.csv  UE1B1MUE2B20M.csv  UE1B1MUE2B40M.csv  UE1B20M.csv  UE1B20MUE2B20M.csv  UE1B20MUE2B30M.csv  UE1B20MUE2B40M.csv  UE1B20MUE2B50M.csv  UE1B30MUE2B30M.csv  UE1B35MUE2B35M.csv  UE1B40M.csv
DRL-SSxApp/old_scripts/: agent.py  xapp_interface.py
DRL-SSxApp/pth/: DDQNcheckpoint.pth  Dueling_DQNcheckpoint.pth
DRL-SSxApp/reward_data/: DQN_episode_rewards.csv  Dueling_episode_rewards.csv  inference_results.csv  maliciousDCF.m
DRL-SSxApp/training_rewards/: Dueling_episode_rewards.csv  plot_all_rewards.m  plot_rewards.m
Slicing_Raw_Data/: UE1B10MUE2B50M.csv  UE1B1MUE2B50M.csv  UE1B20M.csv  UE1B30M.csv  UE1B30MUE2B40M.csv  UE1B50M.csv
Slicing_Raw_Data/1UE_logs_txt/: 1UEB2M.txt  1UEB3M.txt
Slicing_UE_Data/Embb/: UE3B40M.csv  UE4B20M.csv  UE4B30M.csv  UE5B30M.csv  UE6B20M.csv  UE8B20M.csv
Slicing_UE_Data/Medium/: 1UEB2M.csv  1UEB4M.csv  1UEB6M.csv  (+4 more)
documentation/: DRL-SS-instructions.rst
include/: nexran.h
src/: nexran.cc  policy.cc
(+34 files in other folders)
