[tool.poetry]
name = "o-ran-secureslice-drl"
version = "0.1.0"
description = ""
authors = ["Joshua Moore <40312633+joshuamoorexyz@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
torch = "^2.0.0"
numpy = "^1.21.0"
pandas = "^1.3.0"
matplotlib = "^3.7.0"
scipy = "^1.14.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
